@@ -11,6 +11,7 @@ Changed
  - Accessing remote SPARQL endpoints could fail to include default & named graph parameters if POSTing the queries (CORE-434)
  - Lazy query evaluation can cause an apparent infinite loop (i.e. extremely slow query evaluation) in some cases (CORE-439)
  - Fix typo in MIME type definitions for NTriples
+ - Fix bug where HAVING clause that used aggregates could fail to evaluate correctly if project expressions were also used (CORE-440)
 - Build
  - Upgrade PCL build to Profile 328
 - Dependencies
